wrap header; fix error on failed data fetching

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -48,6 +48,7 @@ header {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
+  flex-wrap: wrap;
 
   .heading {
     margin: 0;
